# Engine

./: :w  CMakeLists.txt  LICENSE  README.md  ç
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
imgui/examples/: imguitest.cpp
include/: gui.h  shader.h  window.h
shaders/: fragmentShader.txt  vertexShader.txt
src/: gui.cpp  main.cpp  shader.cpp  window.cpp
